fix(hero-section): align button text to center on mobile
Changed the button text alignment to 	ext-align: center in the hero section for the mobile version.

--- a/src/components/Hero/hero.scss
+++ b/src/components/Hero/hero.scss
@@ -10,6 +10,11 @@
     display: flex;
     gap: 2rem;
     align-items: center;
+    &__btns {
+      @include mobile {
+        text-align: center;
+      }
+    }
 
     @include mobile {
       flex-direction: column;
